[package]
name = "app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
pollster = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wgpu = "0.19"
winit = "0.29"
raw-window-handle = "0.6"
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }
zip = { version = "2.1", default-features = false, features = ["deflate"] }
pty = { path = "../pty" }
vt = { path = "../vt" }
screen = { path = "../screen" }
render = { path = "../render" }
config = { path = "../config" }

[build-dependencies]
embed-resource = "2.4"
ico = "0.3"
