[package]
name = "pty"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Pipes",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
] }
